--- a/index.qmd
+++ b/index.qmd
@@ -259,8 +259,12 @@ the original model said they were.
 
 Visualize the correlation matrix of all numeric columns in `df` using `corrplot()`
 
-```R
-df %>% ... # Insert your code here
+```{R}
+library(corrplot)
+dfCorr <- df %>% 
+  keep(is.numeric) %>%
+  cor()
+corrplot(dfCorr, type = 'upper', order = 'hclust')
 ```
 
 
@@ -272,10 +276,11 @@ df %>% ... # Insert your code here
 Compute the variance inflation factor (VIF) for each predictor in the full model using `vif()` function. What can we conclude from this?
 
 
-```R
-... # Insert your code here
+```{R}
+vif_model <- lm(quality ~ ., df)
+vif(vif_model) %>% knitr::kable()
 ```
-
+From this we can determine the variables that have high inflation factors, which are residual_sugar, density, alcohol and type. Variance inflation measures the change in a given independent variable is influenced by its correlation with other independent variables. With the variables that have high variance inflation factors, this means that they have a highly collinear relationship to the other variables, and the regression results may not be as reliable. So a change in the other variables may have a big influence on the residual_sugar, density, alcohol and type of the wine. As for the rest of the variables that have a low variance inflation factor, their low VIF indicates that they aren't susceptible to change based on the behavior of other variables. 
 
 
 <br><br><br><br>
@@ -296,8 +301,11 @@ Variable selection
 
 Run a backward stepwise regression using a `full_model` object as the starting model. Store the final formula in an object called `backward_formula` using the built-in `formula()` function in R
 
-```R
-... # Insert your code here
+```{R}
+null_model <- lm(quality ~ 1, df)
+full_model <- lm(quality ~ ., df)
+backward_formula <- formula(step(full_model, direction = 'backward', scope = formula(null_model)))
+backward_formula
 ```
 
 ---
@@ -306,8 +314,9 @@ Run a backward stepwise regression using a `full_model` object as the starting m
 
 Run a forward stepwise regression using a `null_model` object as the starting model. Store the final formula in an object called `forward_formula` using the built-in `formula()` function in R
 
-```R
-... # Insert your code here
+```{R}
+forward_formula <- formula(step(null_model, direction = 'forward', scope = formula(full_model)))
+forward_formula
 ```
 
 
@@ -322,17 +331,49 @@ Run a forward stepwise regression using a `null_model` object as the starting mo
 
 3. Then, use the `cv.glmnet()` function to perform LASSO and Ridge regression with `X` and `y`.
 
-```R
-... # Insert your code here. 
+```{R}
+# making a y vector that contains quality variable
+y <- df$quality 
+
+
+# creating a design matrix for the full_model
+make_model_matrix <- function(formula){
+  X <- model.matrix(full_model, df)[, -1]
+  cnames <- colnames(X)
+  for(i in 1:ncol(X)){
+    if(!cnames[i] == "typewhite"){
+      X[, i] <- scale(X[, i])
+    } else {
+      colnames(X)[i] <- "type"
+    }
+  }
+  return(X)
+}
+
+# performing lasso and ridge regression
+lassoReg <- cv.glmnet(x = make_model_matrix(forward_formula), y = y, alpha = 1)
+lassoReg
+
+ridgeReg <- cv.glmnet(x = make_model_matrix(forward_formula), y = y, alpha = 0)
+ridgeReg
 ```
 
 Create side-by-side plots of the ridge and LASSO regression results. Interpret your main findings. 
 
-```R
+```{R}
 par(mfrow=c(1, 2))
-... # Insert your code here. 
+plot(lassoReg, main = "Lasso Regression")
+plot(ridgeReg, main = "Ridge Regression")
 ```
-
+In the lasso regression plot, we can determine that the ideal choice in 
+log($\lambda$) is -4, resulting in 8 variables in the final model or -7, resulting in
+10 variables in the final model, as these are the 'elbow points'. At both those 
+points the mean squared error is relatively small. For the ridge regression plot,
+the ideal log($\lambda$) value is approximately -1.5 or -3. Despite this choice, 
+the plot indicates that no matter the value of log($\lambda$), there will still
+be 10 variables included in the final plot. Based on this, it would be wise to 
+choose the log($\lambda$) that results in the lowest mean squared error which in
+this case is approximately -3.
 ---
 
 ###### 3.4  (5 points)
@@ -341,7 +382,13 @@ Print the coefficient values for LASSO regression at the `lambda.1se` value? Wha
 
 Store the variable names with non-zero coefficients in `lasso_vars`, and create a formula object called `lasso_formula` using the `make_formula()` function provided in the Appendix. 
 
+```{r}
+lasso_coef <- coef(lassoReg, s = "lambda.1se")
+# can do lambda.1se to choose different lambda that will result in diff amount of variables chosen
+selected_vars <- rownames(lasso_coef)[which(abs(lasso_coef) > 0)][-1] # exclude the intercept term
+lasso_coef
 
+```
 ---
 
 ###### 3.5  (5 points)
