--- a/index.qmd
+++ b/index.qmd
@@ -74,14 +74,12 @@ Perform the following tasks to prepare the data frame `df` for analysis:
 
 ```{R}
 # adding the 'type' column to both the white and red wine data frames
-df1 <- df1 %>%
-  mutate(type = 'white')
-df2 <- df2 %>%
-  mutate(type = 'red')
+df1$type <- 'white'
+df2$type <- 'red'
 
 # joining the two data frames on the type column
-df <- df1 %>%
-  full_join(df2, type = type)
+df <- bind_rows(df1,df2)
+
 
 # changing the period in column names to underscores
 colnames(df) <- gsub('\\.', '_', colnames(df))
@@ -89,12 +87,14 @@ colnames(df) <- gsub('\\.', '_', colnames(df))
 # selecting all other columns beside fixed_acidity & free_sulfur_dioxide
 # removing any missing values
 df <- df %>%
-  select(-c(fixed_acidity, free_sulfur_dioxide)) %>%
-  na.omit()
+  select(-c(fixed_acidity, free_sulfur_dioxide))
 
 # changing the type of the 'type' column
 df$type <- factor(df$type)
-  
+
+#removing any missing values
+df <- df %>%
+  na.omit()
 ```
 
 
@@ -124,18 +124,18 @@ Recall from STAT 200, the method to compute the $t$ statistic for the the differ
 ```{R}
 # subsetting the data frame by type of wine (returns all rows for that wine type)
 # using the mean function to find the mean of quality for each wine
-red_wine_mean <- mean(subset(df, df$type == 'red')$quality)
-white_wine_mean <- mean(subset(df, df$type == 'white')$quality)
+red_wine_mean <- mean(df$quality[df$type == 'red'])
+white_wine_mean <- mean(df$quality[df$type == 'white'])
 
 # calculating the difference in mean between the 2 wine types
 diff_mean <- white_wine_mean - red_wine_mean
 
 
 # calculating the length and variance for quality for both wine types
-nW <- length(subset(df, df$type == 'white')$quality)
-nR <- length(subset(df, df$type == 'red')$quality)
-varW <- var((subset(df, df$type == 'white')$quality))
-varR <- var(subset(df, df$type == 'red')$quality)
+nW <- length(df$quality[df$type == 'white'])
+nR <- length(df$quality[df$type == 'red'])
+varW <- var(df$quality[df$type == 'white'])
+varR <- var(df$quality[df$type == 'red'])
 
 sp_squared <- ((nW - 1) * varW + (nR - 1)* varR) / (nW + nR - 2)
 
@@ -154,7 +154,7 @@ Equivalently, R has a function called `t.test()` which enables you to perform a 
 Perform a two-sample t-test to compare the quality of white and red wines using the `t.test()` function with the setting `var.equal=TRUE`. Store the t-statistic in `t2`.
 
 ```{R}
-t_test <- t.test( subset(df, df$type == 'white')$quality, subset(df, df$type == 'red')$quality, var.equal = TRUE)
+t_test <- t.test(df$quality[df$type == 'white'], df$quality[df$type == 'red'], var.equal = TRUE)
 
 t2 <- t_test$statistic
 ```
@@ -167,8 +167,9 @@ Fit a linear regression model to predict `quality` from `type` using the `lm()` 
 
 ```{R}
 fit <- lm(df$quality ~ df$type)
-fit
-t3 <- fit$coefficients[2]
+summary(fit)
+t3 <- summary(fit)$coefficients[2,"t value"]
+t3
 ```
 
 
@@ -365,7 +366,7 @@ par(mfrow=c(1, 2))
 plot(lassoReg, main = "Lasso Regression")
 plot(ridgeReg, main = "Ridge Regression")
 ```
-In the lasso regression plot, we can determine that the ideal choice in 
+In the lasso regression plot, we can determine that the ideal choice in  
 log($\lambda$) is -4, resulting in 8 variables in the final model or -7, resulting in
 10 variables in the final model, as these are the 'elbow points'. At both those 
 points the mean squared error is relatively small. For the ridge regression plot,
@@ -680,7 +681,7 @@ The `make_model_matrix` function below takes a `formula` as input and outputs a 
 
 ```R
 make_model_matrix <- function(formula){
-  X <- model.matrix(rsq_formula, df)[, -1]
+  X <- model.matrix(formula, df)[, -1]
   cnames <- colnames(X)
   for(i in 1:ncol(X)){
     if(!cnames[i] == "typewhite"){
